objects/Agent__c.object
<CustomObject>
    <description>Stores the informations of the users who can access the system.</description>
    <fields>
        <fullName>Agent_Contact__c</fullName>
        <description>Contact Information of the User.</description>
        <inlineHelpText>Contact Information of the Agent</inlineHelpText>
        <label>Agent Contact</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agent_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Email address of the User.</description>
        <inlineHelpText>Email address of the Agent</inlineHelpText>
        <label>Agent Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <description>Full name of the Employee.</description>
        <inlineHelpText>Name of the Agent</inlineHelpText>
        <label>Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Agent</label>
    <nameField>
        <displayFormat>A - {0000}</displayFormat>
        <label>Agent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>